# micronuclAI_labeling

./: ESSENTIAL_LICENSE_CONDITIONS.txt  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py
src/micronuclai_labeling/: __init__.py  __main__.py  _labeling_tool.py
