[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micronuclAI_labeling"
version = "0.0.1"
authors = [
  { name="Miguel Ibarra", email="c180l058j@mozmail.com"},
]
description = "GUI tool for labeling micronuclei images"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: PySimpleGUI"
]

[project.urls]
Homepage = "https://github.com/SchapiroLabor/micronuclAI_labeling"
Issues = "https://github.com/SchapiroLabor/micronuclAI_labeling/issues"