[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micronuclAI_labeling"
version = "0.0.2"
authors = [
  { name="Miguel A. Ibarra-Arellano", email="c180l058j@mozmail.com"},
]
description = "GUI tool for labeling micronuclei images"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: PySimpleGUI"
]
dependencies = [
  "numpy",
  "matplotlib",
  "PySimpleGUI",
  "mask2bbox",
]

license = {file = "LICENSE.txt"}

keywords = ["micronuclei", "labeling", "gui"]

[project.urls]
Homepage = "https://github.com/SchapiroLabor/micronuclAI_labeling"
Issues = "https://github.com/SchapiroLabor/micronuclAI_labeling/issues"